[package]
name = "shadownet-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shadownet"
path = "src/main.rs"

[dependencies]
shadownet-crypto = { path = "../crypto" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.21"
anyhow = "1.0"
colored = "2.0"
rand = "0.9.2"
